--- a/stack.yaml
+++ b/stack.yaml
@@ -6,13 +6,13 @@ packages:
   # - ../hadui/hadui
 
 extra-deps:
-  # uncomment for quick development of local hadui
-  # - ../hadui/hadui
+  # uncomment to use local version of hadui
+  - ../hadui/hadui
 
-  - github: complyue/hadui
-    commit: a80490404eba19aaa77bdbb3bb1c41f6bb570826
-    subdirs:
-      - hadui
+  # - github: complyue/hadui
+  #   commit: a80490404eba19aaa77bdbb3bb1c41f6bb570826
+  #   subdirs:
+  #     - hadui
 
   # need this line until network-3.x goes into lts
   - network-3.1.1.0
