--- a/stack.yaml
+++ b/stack.yaml
@@ -9,11 +9,12 @@ extra-deps:
 
   # to use a version of hadui from github
   - github: complyue/hadui
-    commit: ce82b4f697baeef375c0b35401be523b559b13b0
+    commit: 8e62b0a33175393090745deb05144974195ed917
     subdirs:
       - hadui
 
-  # need this line until network-3.x goes into lts
-  - network-3.1.1.0
+build:
+  library-stripping: false
+  executable-stripping: false
 
 compiler-check: newer-minor
