--- a/hadui.yaml
+++ b/hadui.yaml
@@ -30,30 +30,55 @@ ws-port: 5051
 # backend log level
 log-level: DEBUG
 
-# need a GHC executable supports ':frontend <PluginModule>' command
-# see https://gitlab.haskell.org/ghc/ghc/issues/17348#note_228587
-# with-ghc: ghc-ife
-
 # additional options passed to GHCi
 ghci-options:
-  # run project code compiled, instead of interpreted,
-  # for performance
-#   - -fobject-code
+  # max history in trace, GHCi defaults to 50
+  - -fghci-hist-size=300
+
+  # run project code compiled, instead of interpreted, for performance
+  # but you won't get source locations for uncaught errors at runtime
+  #- -fobject-code
 
 # additional options passed to both GHC and GHCi
 ghc-options:
-  # language features to be used
-  - -XScopedTypeVariables
-  - -XPartialTypeSignatures
-  - -XBlockArguments
-  - -XRankNTypes
-  - -XFlexibleContexts
-  - -XExistentialQuantification
-  - -XMultiParamTypeClasses
-  - -XFlexibleInstances
-  - -XGeneralizedNewtypeDeriving
-  - -XTypeFamilies
-  - -XUndecidableInstances
+  # language extensions to use, recommended by rio
+  #     https://github.com/commercialhaskell/rio/#language-extensions
+  - -XAutoDeriveTypeable
   - -XBangPatterns
+  - -XBinaryLiterals
+  - -XConstraintKinds
+  - -XDataKinds
+  - -XDefaultSignatures
+  - -XDeriveDataTypeable
+  - -XDeriveFoldable
+  - -XDeriveFunctor
+  - -XDeriveGeneric
+  - -XDeriveTraversable
+  - -XDoAndIfThenElse
+  - -XEmptyDataDecls
+  - -XExistentialQuantification
+  - -XFlexibleContexts
+  - -XFlexibleInstances
+  - -XFunctionalDependencies
+  - -XGADTs
+  - -XGeneralizedNewtypeDeriving
+  - -XInstanceSigs
+  - -XKindSignatures
   - -XLambdaCase
-  - -XQuasiQuotes
+  - -XMonadFailDesugaring
+  - -XMultiParamTypeClasses
+  - -XMultiWayIf
+  - -XNamedFieldPuns
+  - -XNoImplicitPrelude
+  - -XOverloadedStrings
+  - -XPartialTypeSignatures
+  - -XPatternGuards
+  - -XPolyKinds
+  - -XRankNTypes
+  - -XRecordWildCards
+  - -XScopedTypeVariables
+  - -XStandaloneDeriving
+  - -XTupleSections
+  - -XTypeFamilies
+  - -XTypeSynonymInstances
+  - -XViewPatterns
