--- a/stack.yaml
+++ b/stack.yaml
@@ -27,7 +27,7 @@ setup-info:
   ghc:
     macosx-custom-ife:
       8.6.5:
-        url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-apple-darwin.tar.xz"
+        url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-apple-darwin.tar.bz2"
     linux64-custom-ife:
       8.6.5:
         url: "https://gitlab.haskell.org/complyue/ghc-ife-bindist/raw/master/ghc-8.6.5-x86_64-unknown-linux.tar.xz"
