--- a/hadui.yaml
+++ b/hadui.yaml
@@ -30,6 +30,15 @@ ws-port: 5051
 # backend log level
 log-level: DEBUG
 
+# target component(s) to be loaded into GHCi
+# * mandatory for Cabal based Hadui projects
+#     `cabal repl` expects you to specify the TARGET explicitly
+# * optional for Stack based Hadui projects
+#     all components will be loaded by default
+# * ignored for barebone Hadui projects
+#     you are expected to craft a proper `.ghci` script
+ghci-targets: []
+
 # additional options passed to GHCi
 ghci-options:
   # max history in trace, GHCi defaults to 50
